feat: create the initial structure for the side bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+  // Recording...
+  //   "wordbench.statusBar.visible": false,
+  //   "workbench.editor.showTabs": "single",
+  //   "workbench.editor.enablePreview": false,
+  //   "workbench.activityBar.location": "hidden",
+  //--
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
